# mercury-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/: client.py  main.py  tools.py
