[project]
name = "mercury-mcp"
version = "0.1.0"
description = "MCP server for Mercury banking API"
requires-python = ">=3.10"
dependencies = [
    "dedalus-mcp",
    "pydantic",
    "requests",
    "python-dotenv",
]

[project.scripts]
mercury-mcp = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build]
targets.wheel.packages = ["src"]
